src/objects/Case/fields/CH_DisplayAssignmentComponent__c.field-meta.xml
<CustomField>
    <fullName>CH_DisplayAssignmentComponent__c</fullName>
    <formula>CH_Initial_Assignment__c || CH_Reassignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Assignment Component</label>
    <type>Checkbox</type>
</CustomField>