src/objects/Case/fields/CH_DurationOpenToAssign__c.field-meta.xml
<CustomField>
    <fullName>CH_DurationOpenToAssign__c</fullName>
    <description>Cases Received and assigned in Minutes</description>
    <formula>((CH_AssignedDate__c - CreatedDate) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Open To Assign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>