src/objects/Case/fields/CH_DurationOpenToRouted__c.field-meta.xml
<CustomField>
    <fullName>CH_DurationOpenToRouted__c</fullName>
    <description>This field is only populated when the user, which assigns the case to a queue or user, has  the user role = GWC</description>
    <label>Duration Open To Routed</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>