src/objects/Case/fields/CH_DurationOpentoRoutedUpdated__c.field-meta.xml
<CustomField>
    <fullName>CH_DurationOpentoRoutedUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicating if Duration Open to Routed field was already updated in order to prevent the workflow to fire more than once (According to 15246)</description>
    <label>Duration Open to Routed Updated</label>
    <type>Checkbox</type>
</CustomField>