src/objects/Case/fields/CH_EditabilityOfDurationEndDate__c.field-meta.xml
<CustomField>
    <fullName>CH_EditabilityOfDurationEndDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field set by flow for being able to edit outage duration end date on case (system field)</description>
    <label>EditabilityOfDurationEndDate</label>
    <type>Checkbox</type>
</CustomField>