src/objects/Case/fields/CH_Email2__c.field-meta.xml
<CustomField>
    <fullName>CH_Email2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>