src/objects/Case/fields/CH_Email3__c.field-meta.xml
<CustomField>
    <fullName>CH_Email3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>