src/objects/Case/fields/CH_EmailTypeController__c.field-meta.xml
<CustomField>
    <fullName>CH_EmailTypeController__c</fullName>
    <description>Code used to determine which Email Type fields will be selectable when creating an Email from this Case.  
The value is set in the Case Trigger
NOKIASC-15636/37/38/39</description>
    <label>CH_EmailTypeController</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>IR-1</fullName>
            </value>
            <value>
                <fullName>IR-2</fullName>
            </value>
            <value>
                <fullName>IR-3</fullName>
            </value>
            <value>
                <fullName>IR-4</fullName>
            </value>
            <value>
                <fullName>CP-1</fullName>
            </value>
            <value>
                <fullName>CP-2</fullName>
            </value>
            <value>
                <fullName>SC-1</fullName>
            </value>
            <value>
                <fullName>SC-2</fullName>
            </value>
            <value>
                <fullName>SC-3</fullName>
            </value>
            <value>
                <fullName>SC-4</fullName>
            </value>
            <value>
                <fullName>SC-5</fullName>
            </value>
            <value>
                <fullName>SC-6</fullName>
            </value>
            <value>
                <fullName>SC-7</fullName>
            </value>
            <value>
                <fullName>SC-8</fullName>
            </value>
            <value>
                <fullName>RES-1</fullName>
            </value>
            <value>
                <fullName>RES-2</fullName>
            </value>
            <value>
                <fullName>RES-3</fullName>
            </value>
            <value>
                <fullName>RES-4</fullName>
            </value>
            <value>
                <fullName>RES-5</fullName>
            </value>
            <value>
                <fullName>RES-6</fullName>
            </value>
            <value>
                <fullName>RES-7</fullName>
            </value>
            <value>
                <fullName>RES-8</fullName>
            </value>
            <value>
                <fullName>RES-9</fullName>
            </value>
            <value>
                <fullName>RES-10</fullName>
            </value>
            <value>
                <fullName>RES-11</fullName>
            </value>
            <value>
                <fullName>RES-12</fullName>
            </value>
            <value>
                <fullName>RES-13</fullName>
            </value>
            <value>
                <fullName>RES-14</fullName>
            </value>
            <value>
                <fullName>RES-15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>