src/objects/Case/fields/CH_EntitlementException__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementException__c</fullName>
    <label>Entitlement Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Not Listed</fullName>
            </value>
            <value>
                <fullName>Covered Network Element Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>Covered Product Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>Entitlement Not Listed</fullName>
            </value>
            <value>
                <fullName>Entitlement Script Verification Required</fullName>
            </value>
            <value>
                <fullName>Entitlement Script Verified Manually</fullName>
            </value>
            <value>
                <fullName>Network Element Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>No Exception</fullName>
                <default>true</default>
                <label>No Exception</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>