src/objects/Case/fields/CH_EntitlementName__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementName__c</fullName>
    <description>Entitlement name field for accessing reports</description>
    <formula>Entitlement.Name</formula>
    <label>Entitlement Name</label>
    <type>Text</type>
</CustomField>