src/objects/Case/fields/CH_EntitlementNotificationTriggerDate__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementNotificationTriggerDate__c</fullName>
    <description>if
If outage Start Date/Time &lt; Reported to Nokia Date/Time, use reported to Nokia Date/Time else use Outage Start Date/Time</description>
    <formula>IF(CH_OutageStartDate__c  &lt;  CH_ReportedDate__c ,CH_ReportedDate__c ,CH_OutageStartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Notification Trigger Date</label>
    <type>DateTime</type>
</CustomField>