src/objects/Case/fields/CH_EntitlementReport__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementReport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>