src/objects/Case/fields/CH_EntitlementScriptFlag__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementScriptFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US NOKIASC-16353 :Used to hide the CH_Display_Entitlement_Script component</description>
    <label>Entitlement Script Flag</label>
    <type>Checkbox</type>
</CustomField>