src/objects/Case/fields/CH_EntitlementScriptVerificationComplete__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementScriptVerificationComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitlement Script Verification Complete</label>
    <type>Checkbox</type>
</CustomField>