src/objects/Case/fields/CH_EntitlementStatus__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementStatus__c</fullName>
    <label>Entitlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CH_EntitlementException__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Entitled (Automated Verification)</fullName>
            </value>
            <value>
                <fullName>Entitled (Manually Verified)</fullName>
            </value>
            <value>
                <fullName>Management Override</fullName>
            </value>
            <value>
                <fullName>Network Element Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pending CAPM Review</fullName>
            </value>
            <value>
                <fullName>Pending Manual Entitlement Script Verification</fullName>
            </value>
            <value>
                <fullName>Service Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>