src/objects/Case/fields/CH_ExternalBridge__c.field-meta.xml
<CustomField>
    <fullName>CH_ExternalBridge__c</fullName>
    <description>Details of the Bridge with the customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Bridge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>