src/objects/Case/fields/CH_ExternalSystemAccount__c.field-meta.xml
<CustomField>
    <fullName>CH_ExternalSystemAccount__c</fullName>
    <description>Account for the external systems for the Case-object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External System Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>