src/objects/Case/fields/CH_ExternalSystemProduct__c.field-meta.xml
<CustomField>
    <fullName>CH_ExternalSystemProduct__c</fullName>
    <description>Product for the external systems for the Case-object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External System Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>