src/objects/Case/fields/CH_ExternalSystemProductRelease__c.field-meta.xml
<CustomField>
    <fullName>CH_ExternalSystemProductRelease__c</fullName>
    <description>Product Release for the external systems for the Case-object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External System Product Release</label>
    <length>100</length>
    <type>Text</type>
</CustomField>