src/objects/Case/fields/CH_ExternalSystemProductVariant__c.field-meta.xml
<CustomField>
    <fullName>CH_ExternalSystemProductVariant__c</fullName>
    <description>Product Variant for the external systems for the Case-object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External System Product Variant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>