src/objects/Case/fields/CH_ExternalSystemSolution__c.field-meta.xml
<CustomField>
    <fullName>CH_ExternalSystemSolution__c</fullName>
    <description>Solution for the external systems for the Case-object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External System Solution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>