src/objects/Case/fields/CH_FinalSolutionAccepted__c.field-meta.xml
<CustomField>
    <fullName>CH_FinalSolutionAccepted__c</fullName>
    <description>Date/Time when Final Solution is added to the Case.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Solution Accepted</label>
    <type>DateTime</type>
</CustomField>