src/objects/Case/fields/CH_GlobalServiceOrder__c.field-meta.xml
<CustomField>
    <fullName>CH_GlobalServiceOrder__c</fullName>
    <description>CH: US-22261 Collecting P20 Order Details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Global Service Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>