src/objects/Case/fields/CH_GWC_SecurityGroup__c.field-meta.xml
<CustomField>
    <fullName>CH_GWC_SecurityGroup__c</fullName>
    <description>These field is used for sharing rules and in support tickets to automate the process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GWC Security Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>