src/objects/Case/fields/CH_HW_Component__c.field-meta.xml
<CustomField>
    <fullName>CH_HW_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HW Component</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>HW Components</relationshipLabel>
    <relationshipName>CH_HW_Components</relationshipName>
    <type>Lookup</type>
</CustomField>