src/objects/Case/fields/CH_HW_Name__c.field-meta.xml
<CustomField>
    <fullName>CH_HW_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HW Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>