src/objects/Case/fields/CH_IncidentDuration__c.field-meta.xml
<CustomField>
    <fullName>CH_IncidentDuration__c</fullName>
    <description>Field add to calculate Incident duration US4818</description>
    <formula>CH_SystemRestored__c -  CH_IssueOccurenceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>