src/objects/Case/fields/CH_IncidentProblemOwner__c.field-meta.xml
<CustomField>
    <fullName>CH_IncidentProblemOwner__c</fullName>
    <formula>CH_Problem__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CH_IncidentProblemOwner</label>
    <type>Text</type>
</CustomField>