src/objects/Case/fields/CH_Initial_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CH_Initial_Assignment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that for a new ticket, no assignment has been made.
As soon as somebody is assigned the field is set to false</description>
    <label>CH Initial Assignment</label>
    <type>Checkbox</type>
</CustomField>