src/objects/Case/fields/CH_Initial_Response_Within_Target__c.field-meta.xml
<CustomField>
    <fullName>CH_Initial_Response_Within_Target__c</fullName>
    <description>Formula used to check Initial Response milestone completed with in target time</description>
    <formula>CH_InitialResponseTargetDate__c  &gt;=  CH_InitialResponse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Response Within Target</label>
    <type>Checkbox</type>
</CustomField>