src/objects/Case/fields/CH_InitialAssignment__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Assignment</label>
    <type>Checkbox</type>
</CustomField>