src/objects/Case/fields/CH_InitialDiagnosis__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialDiagnosis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Diagnosis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>