src/objects/Case/fields/CH_InitialResponse__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialResponse__c</fullName>
    <description>Initial Response</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Response Date</label>
    <type>DateTime</type>
</CustomField>