src/objects/Case/fields/CH_InitialResponseCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialResponseCompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Response Completion Date</label>
    <type>DateTime</type>
</CustomField>