src/objects/Case/fields/CH_InitialResponseSLASuccess__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialResponseSLASuccess__c</fullName>
    <formula>CH_InitialResponse__c  -  CH_InitialResponseTargetDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Response SLA Success</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>