src/objects/Case/fields/CH_InitialResponseSLAViolation__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialResponseSLAViolation__c</fullName>
    <formula>CH_InitialResponseTargetDate__c  -   CH_InitialResponse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Response SLA Violation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>