src/objects/Case/fields/CH_InitialResponseStartDate__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialResponseStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Response Start Date</label>
    <type>DateTime</type>
</CustomField>