src/objects/Case/fields/CH_InitialResponseTargetDate__c.field-meta.xml
<CustomField>
    <fullName>CH_InitialResponseTargetDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Response Target Date</label>
    <type>DateTime</type>
</CustomField>