src/objects/Case/fields/CH_Initialresponsetimeframe__c.field-meta.xml
<CustomField>
    <fullName>CH_Initialresponsetimeframe__c</fullName>
    <formula>CreatedDate  -  CH_ReportedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Response Timeframe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>