src/objects/Case/fields/CH_InternalBridge__c.field-meta.xml
<CustomField>
    <fullName>CH_InternalBridge__c</fullName>
    <description>Nokia Internal Bridge</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Bridge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>