src/objects/Case/fields/CH_InternalCase__c.field-meta.xml
<CustomField>
    <fullName>CH_InternalCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This allows the agent to flag a case as internal only.</description>
    <label>Internal Case</label>
    <type>Checkbox</type>
</CustomField>