src/objects/Case/fields/CH_InternalStatus__c.field-meta.xml
<CustomField>
    <fullName>CH_InternalStatus__c</fullName>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Entitlement Check</fullName>
            </value>
            <value>
                <fullName>Investigation in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Supplier</fullName>
            </value>
            <value>
                <fullName>Root Cause Analysis in progress</fullName>
            </value>
            <value>
                <fullName>Change Request Initiated</fullName>
            </value>
            <value>
                <fullName>Diagnosis in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Customer Implementation</fullName>
            </value>
            <value>
                <fullName>Customer Implementation in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Pending Release</fullName>
            </value>
            <value>
                <fullName>Pending HW Delivery</fullName>
            </value>
            <value>
                <fullName>Pending HW Replacement</fullName>
            </value>
            <value>
                <fullName>Pending Field Service</fullName>
            </value>
            <value>
                <fullName>Feature/Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Pending Customer Planned MW</fullName>
            </value>
            <value>
                <fullName>Pending Remote Access</fullName>
            </value>
            <value>
                <fullName>Work Suspended by Customer</fullName>
            </value>
            <value>
                <fullName>Pending Customer Information</fullName>
            </value>
            <value>
                <fullName>Pending Reoccurence</fullName>
            </value>
            <value>
                <fullName>3rd Party analysis</fullName>
                <isActive>false</isActive>
                <label>3rd Party analysis</label>
            </value>
            <value>
                <fullName>Agent analysis</fullName>
                <isActive>false</isActive>
                <label>Agent analysis</label>
            </value>
            <value>
                <fullName>Commercial (CT)</fullName>
                <isActive>false</isActive>
                <label>Commercial (CT)</label>
            </value>
            <value>
                <fullName>Correction Implementation</fullName>
                <isActive>false</isActive>
                <label>Correction Implementation</label>
            </value>
            <value>
                <fullName>Cross BG /Product Analysis</fullName>
                <isActive>false</isActive>
                <label>Cross BG /Product Analysis</label>
            </value>
            <value>
                <fullName>Customer Acceptance</fullName>
                <isActive>false</isActive>
                <label>Customer Acceptance</label>
            </value>
            <value>
                <fullName>Customer Information Requested</fullName>
                <isActive>false</isActive>
                <label>Customer Information Requested</label>
            </value>
            <value>
                <fullName>Customer Issue Reproduction</fullName>
                <isActive>false</isActive>
                <label>Customer Issue Reproduction</label>
            </value>
            <value>
                <fullName>Engineer analysis</fullName>
                <isActive>false</isActive>
                <label>Engineer analysis</label>
            </value>
            <value>
                <fullName>Expert Analysis</fullName>
                <isActive>false</isActive>
                <label>Expert Analysis</label>
            </value>
            <value>
                <fullName>HW Delivery</fullName>
                <isActive>false</isActive>
                <label>HW Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>