src/objects/Case/fields/CH_Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>CH_Invitation_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CH_Invitation_Link</label>
    <type>Url</type>
</CustomField>