src/objects/Case/fields/CH_InvitationExpiration__c.field-meta.xml
<CustomField>
    <fullName>CH_InvitationExpiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Due Date</label>
    <type>DateTime</type>
</CustomField>