src/objects/Case/fields/CH_InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>CH_InvitationLink__c</fullName>
    <formula>IF((ISPICKVAL(Status,&quot;Closed&quot;) || ISPICKVAL(Status,&quot;Completed&quot;))
	,IF	( 	OR	(CH_Invitation_Link__c=&quot;Completed&quot;
				, CH_Invitation_Link__c=&quot;Expired&quot;
				)
				, CH_Invitation_Link__c
				, IF	( OR( ISBLANK(CH_Invitation_Link__c), ISPICKVAL(CH_ServiceType__c,&quot;Internal Support&quot;))
						, &quot;Not Applicable&quot;
						, HYPERLINK(CH_Invitation_Link__c , &quot;Pending&quot;)
						)
		)
	,IF	(	AND(OR	( ISPICKVAL(Entitlement.ServiceContract.CH_SWS_Survey__c, &quot;Enabled&quot;)
				, AND	( ISPICKVAL(Entitlement.ServiceContract.CH_SWS_Survey__c, &quot;Use Legal Entity Setting&quot;)
						, ISPICKVAL(Account.CH_SWS_Survey__c, &quot;Enabled&quot;)
						)
				
				),NOT(ISPICKVAL(CH_ServiceType__c,&quot;Internal Support&quot;)))
		, &quot;Applicable&quot;
		, &quot;Not Applicable&quot;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey</label>
    <type>Text</type>
</CustomField>