src/objects/Case/fields/CH_IsCompleteInitialResponse__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteInitialResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether Initial Response is complete or not.</description>
    <label>Is Complete Initial Response</label>
    <type>Checkbox</type>
</CustomField>