src/objects/Case/fields/CH_IsCompleteInitialResponseSetByFlow__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteInitialResponseSetByFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine whether the Initial Response Milestone has been completed by a flow.</description>
    <label>Is Complete Initial Response Set By Flow</label>
    <type>Checkbox</type>
</CustomField>