src/objects/Case/fields/CH_IsCompleteRestore__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteRestore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether Restore is complete or not.</description>
    <label>Is Complete Restore</label>
    <type>Checkbox</type>
</CustomField>