src/objects/Case/fields/CH_IsCompleteServiceDisruptionReport__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteServiceDisruptionReport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether Service Disruption Report is complete or not.</description>
    <label>Is Complete Service Disruption Report</label>
    <type>Checkbox</type>
</CustomField>