src/objects/Case/fields/CH_IsCompleteServiceDisruptionReport_Set__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteServiceDisruptionReport_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to validate whether a milestone has been completed by a flow, in this particular instance by a flow triggered by an email.</description>
    <label>Is Complete Service Disruption Report Se</label>
    <type>Checkbox</type>
</CustomField>