src/objects/Case/fields/CH_IsCompleteSetIssueResolved__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteSetIssueResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check the Issue is resolved or not</description>
    <label>Is Complete Set Issue Resolved</label>
    <type>Checkbox</type>
</CustomField>