src/objects/Case/fields/CH_IsCompleteSolutionProvided__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteSolutionProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether Solution Provided is complete or not.</description>
    <label>Is Complete Solution Provided</label>
    <type>Checkbox</type>
</CustomField>