src/objects/Case/fields/CH_IsCompleteSolutionProvided_SetByFlow__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteSolutionProvided_SetByFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to validate whether a milestone has been completed by a flow, in this particular instance by a flow triggered by an email.</description>
    <label>Is Complete Solution Provided Set By Flo</label>
    <type>Checkbox</type>
</CustomField>