src/objects/Case/fields/CH_IsCompleteTemporarySolution__c.field-meta.xml
<CustomField>
    <fullName>CH_IsCompleteTemporarySolution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether Temporary Solution is complete or not.</description>
    <label>Is Complete Temporary Solution</label>
    <type>Checkbox</type>
</CustomField>