src/objects/Case/fields/CH_IsInitialResponseSLA__c.field-meta.xml
<CustomField>
    <fullName>CH_IsInitialResponseSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initial Response SLA</label>
    <type>Checkbox</type>
</CustomField>