src/objects/Case/fields/CH_IsServiceDisruptionReportProvided__c.field-meta.xml
<CustomField>
    <fullName>CH_IsServiceDisruptionReportProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used this field to complete Service Disruption Report Provided case milestone.</description>
    <label>Is Service Disruption Report Provided</label>
    <type>Checkbox</type>
</CustomField>