src/objects/Case/fields/CH_IsServiceDisruptionReportSLA__c.field-meta.xml
<CustomField>
    <fullName>CH_IsServiceDisruptionReportSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Service Disruption Report SLA</description>
    <label>Is Service Disruption Report SLA</label>
    <type>Checkbox</type>
</CustomField>