src/objects/Case/fields/CH_IsSolutionProvidedSLA__c.field-meta.xml
<CustomField>
    <fullName>CH_IsSolutionProvidedSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be used to check if Milestone should be SLA or Non Contractual</description>
    <label>Is Solution Provided SLA</label>
    <type>Checkbox</type>
</CustomField>