src/objects/Case/fields/CH_IssueDescription__c.field-meta.xml
<CustomField>
    <fullName>CH_IssueDescription__c</fullName>
    <description>Description of the case issue and related impacts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>