src/objects/Case/fields/CH_IssueOccurenceDate__c.field-meta.xml
<CustomField>
    <fullName>CH_IssueOccurenceDate__c</fullName>
    <description>When the issue actually occured</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Occurence Date</label>
    <type>DateTime</type>
</CustomField>