src/objects/Case/fields/CH_IsSystemRestoredSLA__c.field-meta.xml
<CustomField>
    <fullName>CH_IsSystemRestoredSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Restored SLA</label>
    <type>Checkbox</type>
</CustomField>