src/objects/Case/fields/CH_IsTemporarySolutionProvidedSLA__c.field-meta.xml
<CustomField>
    <fullName>CH_IsTemporarySolutionProvidedSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Temporary Solution Provided SLA</label>
    <type>Checkbox</type>
</CustomField>