src/objects/Case/fields/CH_JIRA_ResolutionCode__c.field-meta.xml
<CustomField>
    <fullName>CH_JIRA_ResolutionCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>R&amp;D Resolution Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>