src/objects/Case/fields/CH_LastCustomerInteraction__c.field-meta.xml
<CustomField>
    <fullName>CH_LastCustomerInteraction__c</fullName>
    <description>When was the customer last reached?incoming or outgoing?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Customer Interaction</label>
    <type>DateTime</type>
</CustomField>