src/objects/Case/fields/CH_LastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CH_LastModifiedDateTime__c</fullName>
    <description>Tracks the LastModified Date/Time when a case record has been modified</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>