src/objects/Case/fields/CH_LawfullIntercept_CALEA__c.field-meta.xml
<CustomField>
    <fullName>CH_LawfullIntercept_CALEA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These field is used for sharing rules and in support tickets to automate the process.</description>
    <label>Lawfull Intercept (CALEA)</label>
    <type>Checkbox</type>
</CustomField>