src/objects/Case/fields/CH_LegacyCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CH_LegacyCaseNumber__c</fullName>
    <description>CH: This field will store the case number from legacy system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>