src/objects/Case/fields/CH_LegacyCaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CH_LegacyCaseStatus__c</fullName>
    <description>CH: This Field will reflect generally if the case was still open or closed at the time of the conversion.</description>
    <label>Legacy Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>